--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
         }
     ],
     "permissions": ["tabs"],
-    "browser_action": {
+    "action": {
         "default_icon": "./general_logo.png",
         "default_popup": "./scribd.com/popup/index.html"
     }
